[project]
name = "ssdesdsdxl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.8.1",
    "diffusers>=0.34.0",
    "numpy>=2.3.1",
    "pillow>=11.2.1",
    "tokenizers>=0.21.2",
    "torch>=1.13",
    "tqdm>=4.67.1",
    "transformers>=4.53.0",
]
